style.css
* {
  box-sizing: border-box;
}

:root {
  --darker-italian-white-color: hsl(72, 20%, 92%);
  --italian-green-color: hsl(150, 100%, 27%);
  --italian-red-color: hsl(357, 72%, 47%);
  --italian-white-color: hsl(72, 20%, 95%);
}

body {
  font-family: "Orbitron", sans-serif;
  margin: 0;
  overflow-x: hidden;
}

.full-screen-container {
  display: flex;
  min-height: 100vh;
  min-width: 100vw;
}

.full-screen-container::before {
  background-color: var(--italian-green-color);
  content: "";
  flex-grow: 1;
}

.full-screen-container::after {
  background-color: var(--italian-red-color);
  content: "";
  flex-grow: 1;
}

.content-container {
  align-items: center;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  justify-content: space-between;
}

.page-logo {
  color: var(--italian-green-color);
  font-size: 24px;
  letter-spacing: 3px;
  margin-bottom: 0;
}

.info {
  color: var(--italian-green-color);
  display: inline-block;
  text-decoration: none;
  animation: jump 2.4s 1s 2;
}

.info:hover {
  color: tomato;
}

.info:focus-visible {
  outline: 2px dashed tomato;
}

@keyframes jump {
  10% { transform: translate(0%, 10%) scale(1, 0.7) }
  25% { transform: translate(0%, -50%) scale(1, 1); }
  30% { transform: translate(0%, -50%) rotate(5deg); }
  35% { transform: translate(0%, -50%) rotate(-5deg); }
  40% { transform: translate(0%, -50%) rotate(5deg); }
  45% { transform: translate(0%, -50%) rotate(-5deg); }
  50% { transform: translate(0%, -50%) scale(1, 1); color: tomato}
  70% { transform: translate(0%, 10%) scale(1, 0.7); }
  90% { transform: translate(0%, 0%) scale(1, 1); }
}

.pomodoro-timer {
  align-items: center;
  display: flex;
  flex-direction: column;
}

.timer-logo {
  font-size: 16px;
  letter-spacing: 1px;
  margin-top: 0;
}

#counter {
  background-color: hsl(9, 100%, 64%, 0.8);
  border-left: 2px solid black;
  border-right: 2px solid black;
  border-top: 2px solid black;
  color: black;
  font-size: 14px;
  font-weight: 600;
  padding: 0 16px;
  z-index: 1;
}

#clock {
  background-color: hsl(9, 100%, 64%, 0.8);
  border: 3px solid black;
  box-shadow: 1px 0px 20px 0px rgba(50, 50, 50, 1);
  color: black;
  display: flex;
  font-family: "Courier New", Courier, monospace;
  font-size: 94px;
  margin-bottom: 16px;
  -moz-box-shadow: 1px 0px 20px 0px rgba(50, 50, 50, 1);
  padding: 0 40px;
  transition-duration: 0.3s;
  -webkit-box-shadow: 1px 0px 20px 0px rgba(50, 50, 50, 1);
}

#clock:hover {
  background-color: tomato;
  box-shadow: 1px 0px 30px 0px rgba(50, 50, 50, 1);
  cursor: pointer;
  -moz-box-shadow: 1px 0px 30px 0px rgba(50, 50, 50, 1);
  -webkit-box-shadow: 1px 0px 30px 0px rgba(50, 50, 50, 1);
}

#clock:focus-visible {
  background-image: repeating-linear-gradient(
    -45deg,
    transparent 0 48px,
    rgba(255, 255, 255, 0.5) 48px 96px
  );
}

.button-group > button {
  border: 2px solid black;
  border-radius: 4px;
  box-shadow: 1px 0px 10px 0px rgba(50, 50, 50, 1);
  -moz-box-shadow: 1px 0px 10px 0px rgba(50, 50, 50, 1);
  -webkit-box-shadow: 1px 0px 10px 0px rgba(50, 50, 50, 1);
  cursor: pointer;
  display: block;
  font-family: "Orbitron", sans-serif;
  font-size: 24px;
  margin-bottom: 12px;
  padding: 0 7px;
  transition-duration: 0.3s;
  width: 100%;
}

button:hover {
  box-shadow: 1px 0px 15px 0px rgba(50, 50, 50, 1);
  -moz-box-shadow: 1px 0px 15px 0px rgba(50, 50, 50, 1);
  -webkit-box-shadow: 1px 0px 15px 0px rgba(50, 50, 50, 1);
}

button.start {
  background-color: hsla(122, 39%, 49%, 0.2);
}

button.start:hover {
  background-color: hsla(122, 39%, 49%, 0.4);
}

button.stop {
  background-color: hsl(4, 90%, 58%, 0.2);
}

button.stop:hover {
  background-color: hsl(4, 90%, 58%, 0.4);
}

button#reset {
  background-color: hsl(195, 100%, 36%, 0.2);
}

button#reset:hover {
  background-color: hsl(195, 100%, 36%, 0.4);
}

button.start:focus-visible,
button.stop:focus-visible,
button#reset:focus-visible {
  background-image: repeating-linear-gradient(
    -45deg,
    transparent 0 11px,
    white 11px 22px
  );
}

#message {
  font-size: 16px;
  letter-spacing: 1px;
}

.footer {
  color: var(--italian-red-color);
  font-size: 12px;
  letter-spacing: 1px;
}

@media (max-width: 1280px) and (max-height: 800px) {
  .timer-logo {
    font-size: 14px;
  }

  #counter {
    border-left: 1px solid black;
    border-right: 1px solid black;
    border-top: 1px solid black;
    font-size: 12px;
    padding: 0 14px;
  }

  #clock {
    border: 2px solid black;
    font-size: 80px;
    padding: 0 30px;
  }

  .button-group > button {
    border: 1px solid black;
    box-shadow: 1px 0px 7px 0px rgba(50, 50, 50, 1);
    -moz-box-shadow: 1px 0px 7px 0px rgba(50, 50, 50, 1);
    -webkit-box-shadow: 1px 0px 7px 0px rgba(50, 50, 50, 1);
    font-size: 20px;
  }

  #message {
    font-size: 14px;
  }
}

@media (max-width: 640px) {
  .page-logo {
    font-size: 18px;
    letter-spacing: 2px;
  }

  #clock {
    box-shadow: 1px 0px 15px 0px rgba(50, 50, 50, 1);
    -moz-box-shadow: 1px 0px 15px 0px rgba(50, 50, 50, 1);
    -webkit-box-shadow: 1px 0px 15px 0px rgba(50, 50, 50, 1);
    font-size: 64px;
  }

  #message {
    font-size: 13px;
  }

  .footer {
    font-size: 12px;
  }
}

